[gd_scene load_steps=9 format=3 uid="uid://esp3sh2kg77s"]

[ext_resource type="Script" uid="uid://fynfvi5mmk8t" path="res://scripts/paper_scene.gd" id="1_1g4or"]
[ext_resource type="Texture2D" uid="uid://dr5h4ujte05a4" path="res://assets/textures/Background Empty.PNG" id="1_ya0lg"]
[ext_resource type="FontFile" uid="uid://bhww5xieogvy" path="res://assets/font/MegamaxJonathanToo-YqOq2.ttf" id="2_rpnwd"]
[ext_resource type="PackedScene" uid="uid://c78dbrwfc2igx" path="res://scenes/button.tscn" id="2_uuq48"]
[ext_resource type="Texture2D" uid="uid://beag1ijy1c8y7" path="res://assets/textures/newspaper_nude.png" id="5_scocm"]

[sub_resource type="Animation" id="Animation_1g4or"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_7g22y"]
resource_name = "fade"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_c28eh"]
_data = {
&"RESET": SubResource("Animation_1g4or"),
&"fade": SubResource("Animation_7g22y")
}

[node name="PaperScene" type="TextureRect"]
modulate = Color(1, 1, 1, 0)
texture_filter = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("1_ya0lg")
script = ExtResource("1_1g4or")

[node name="Header2" type="RichTextLabel" parent="."]
modulate = Color(0.26467, 0.166225, 0.0683703, 1)
texture_filter = 1
layout_mode = 2
offset_left = 39.0
offset_top = 55.0
offset_right = 526.0
offset_bottom = 89.0
size_flags_vertical = 3
theme_override_fonts/normal_font = ExtResource("2_rpnwd")
theme_override_font_sizes/normal_font_size = 33
text = "CITY NEWS"
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="Header" type="RichTextLabel" parent="."]
modulate = Color(0.111197, 0.111197, 0.111197, 1)
texture_filter = 1
layout_mode = 2
offset_left = 39.0
offset_top = 140.0
offset_right = 546.0
offset_bottom = 169.0
size_flags_vertical = 3
theme_override_fonts/normal_font = ExtResource("2_rpnwd")
theme_override_font_sizes/normal_font_size = 22
text = "Hello"
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="Content" type="RichTextLabel" parent="."]
modulate = Color(0.156779, 0.124527, 0.0694409, 1)
texture_filter = 1
layout_mode = 2
offset_left = 254.0
offset_top = 175.0
offset_right = 538.0
offset_bottom = 297.0
theme_override_fonts/normal_font = ExtResource("2_rpnwd")
theme_override_font_sizes/normal_font_size = 11
text = "Hello"
fit_content = true

[node name="Content2" type="RichTextLabel" parent="."]
modulate = Color(0.156779, 0.124527, 0.0694409, 1)
texture_filter = 1
layout_mode = 2
offset_left = 254.0
offset_top = 256.0
offset_right = 538.0
offset_bottom = 297.0
theme_override_fonts/normal_font = ExtResource("2_rpnwd")
theme_override_font_sizes/normal_font_size = 11
text = "Chemicals used:"
fit_content = true

[node name="TextureButton" parent="." instance=ExtResource("2_uuq48")]
texture_filter = 1
layout_mode = 2
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 482.0
offset_top = 252.0
offset_right = 546.0
offset_bottom = 316.0

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 32.0
offset_top = 171.0
offset_right = 248.0
offset_bottom = 304.0
texture = ExtResource("5_scocm")
expand_mode = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_c28eh")
}

[connection signal="pressed" from="TextureButton" to="." method="_on_texture_button_pressed"]
